--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="terceira-secao">
             <div>
                 <img src="./noticias/assets/images/image-retro-pcs.jpg" alt="imagens de computadores antigos">
                 <div>
