--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
+     <script src="./script.js" defer></script>
     <title>W. Notícias</title>
 </head>
 <body>
@@ -20,7 +21,6 @@
         </button>
         
         <nav>
-
             <button>
                 <img src="./noticias/assets/images/icon-menu-close.svg" alt="icone de x para fechar o menu">
             </button>
