--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
                 <source media="(min-width: 700px)" srcset="./noticias/assets/images/image-web-3-desktop.jpg">
                 <img src="./noticias/assets/images/image-web-3-mobile.jpg" alt="ícone de puzzle colorido">
             </picture>
+            
             <h1>O futuro brilhante da web 3.0?</h1>
-            <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. mas será que ela realmente está cumprindo sua promessa?</p>
-            <button>Ler mais</button>
+            <div>
+                <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. mas será que ela realmente está cumprindo sua promessa?</p>
+                <button>Ler mais</button>
+            </div>
         </section>
 
         <section class="segunda-secao">
